--- a/Changelog
+++ b/Changelog
@@ -14,6 +14,7 @@
 	- Fixed bug #801408: manifest defined main-class ignored
 	- Added Class Chooser Dialog in Java Application panel
 	- Added splash screen (displays name and version).
+	- Added maximum memory and initial memory setting support
 	
 0.9.2 (5 Sept 2003)
 	- Fixed a bug that prevented jsmoothgen to compile if the JIMI API
