--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+0.9.6
+	- Now the JVM look-up method also takes the installed JDK into
+	account (not only the installed JRE)
+	- Fixes bug #858829 (Windowed Wrapper blocks Explorer)
+
 0.9.5
 	- ! Made the jar embedding optional. Now, one can choose to
 	include or not a jar file in the exe. If the jar is not included,
