--- a/Changelog
+++ b/Changelog
@@ -3,7 +3,8 @@
 	account (not only the installed JRE)
 	- Fixed bug #858829 (Windowed Wrapper blocks Explorer)
 	- Fixed issue with main class selector
-
+	- test
+	
 0.9.5
 	- ! Made the jar embedding optional. Now, one can choose to
 	include or not a jar file in the exe. If the jar is not included,
