Some typos fixed and added explanation of some features

--- a/src/locale/Texts.properties
+++ b/src/locale/Texts.properties
@@ -16,12 +16,12 @@ ABOUT=About...
 #
 # Texts from the panels...
 #
-SKELETONCHOOSER_LABEL=Skeleton Chooser
-SKELETONCHOOSER_HELP=Choose your skeleton according to the properties you wish to set up for your executable binary. Read carefully the description of the wrapper, and choose it according to your needs relative to the applications.
+SKELETONCHOOSER_LABEL=Skeleton Selection
+SKELETONCHOOSER_HELP=Choose your skeleton wrapper according to how your executable binary should run. Read carefully the description of the wrappers, they may have limitations in some context.
 EXECUTABLE_LABEL=Executable Binary
 EXECUTABLE_HELP=This is the name given to the executable binary.<br>It must end with the ".exe" suffix. For instance, <tt>myprogram.exe</tt> is just fine.
 CURRENTDIR_LABEL=Current Directory
-CURRENTDIR_HELP=Selects the directory to be set as "current directory" when the application is launched. <p>Leave it empty to keep the current directory unmodified.<p>Typical use of this option is to modify the current path for executable located in a <tt>bin</tt> sub-directory, but the program expects to be launched from the root directory of the application.<p><b>WARNING</b>: Unlike the other files or directory options, which are all relative to the project file, this value is always relative to the generated executable location. That is, if you set ".." or "an\\other\\dir" here, the generated wrapper will change to this directory from <u>its</u> current own current directory.
+CURRENTDIR_HELP=Selects the directory to be set as the "current directory" of the the application, when launched. <p>Just leave it empty if you don't need any modification of this value at startup.<p>Typical use of this option is to go up one level when the executable is in a <tt>bin</tt> subdirectory of the program root.<p><b>WARNING</b>: Unlike the other files or directory options, which are all relative to the project file, this value is always relative to the generated executable location. That is, if you set <tt>".."</tt> or "an\\other\\dir" here, the generated wrapper will change to this directory from <u>its</u> current own current directory.
 SKELETONPROPERTIES_LABEL=Skeleton Properties
 SKELETONPROPERTIES_HELP=The table above shows the properties associated to the selected skeleton. Change the values of the properties to customize the behaviour of the native executable wrapper generated.
 ICONLOCATION_LABEL=Executable Icon
