--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,20 @@
+0.9.8
+	- Fixed the classpath in JRE1.2+ VM DLL instanciation
+	- Added a jvm.dll search when the location is not defined in the
+	registry.
+	- Fixed jvm version not taken into account when launching java.exe
+	from the PATH envvar.
+	- Added patch from zregvart: disable version check of the VM  when
+	the VM is "bundled"
+	- Added headless mode setup in cmdline, and changed mediatracked
+	dependency on Canvas rather than Label (to avoid Headless
+	Exceptions)
+	- Fixed issues when calling jre[w]/java[w].exe with quotes in the
+	pathname
+	- Fixes the "version guessing" when the noconsole flag is enabled
+	- Now kill all the process launched and still running on exit
+	- Fixes some issues with JVM1.1 process-spawning
+	
 0.9.7
 	- Changed the GUI: now it uses l2f-common and does not rely on the
 	netbeans' form editor to build the interfaces. This is a major
