Added new skeleton properties edition Changed overall GUI for editors

--- a/src/locale/Texts.properties
+++ b/src/locale/Texts.properties
@@ -17,7 +17,7 @@ ABOUT=About...
 # Texts from the panels...
 #
 SKELETONCHOOSER_LABEL=Skeleton Selection
-SKELETONCHOOSER_HELP=Choose your skeleton wrapper according to how your executable binary should run. Read carefully the description of the wrappers, they may have limitations in some context.
+SKELETONCHOOSER_HELP=A skeleton is an empty wrapper that launch your application. Each skeleton has its own behaviour regarding the application configuration and what is done when no JRE is found on the end-user's computer.<p>Read carefully their descriptions before picking one.
 EXECUTABLE_LABEL=Executable Binary
 EXECUTABLE_HELP=This is the name given to the executable binary.<br>It must end with the ".exe" suffix. For instance, <tt>myprogram.exe</tt> is just fine.
 CURRENTDIR_LABEL=Current Directory
@@ -25,34 +25,34 @@ CURRENTDIR_HELP=Selects the directory to be set as the "current directory" of th
 SKELETONPROPERTIES_LABEL=Skeleton Properties
 SKELETONPROPERTIES_HELP=The table above shows the properties associated to the selected skeleton. Change the values of the properties to customize the behaviour of the native executable wrapper generated.
 ICONLOCATION_LABEL=Executable Icon
-ICONLOCATION_HELP=Optionnally, you can select an icon to be compiled with the executable. This icon is typically used by the operating system to represent the file.<p>You should prefer .ICO files, as this is the format natively used for Win32 executable images, but <tt>GIF</tt>, <tt>JPEG</tt>, or <tt>PNG</tt> files should work fine, at the expense of an image quality decrease.
+ICONLOCATION_HELP=Optionnally, you can select an icon to be compiled with the executable. This icon is typically used by the operating system to represent the file.<p>You should prefer .ICO files, as this is the format natively used for Win32 executable images, but <tt>GIF</tt>, <tt>JPEG</tt>, or <tt>PNG</tt> files should work fine, at the expense of an image quality decrease due to the color reduction process.
 ARGUMENTS_LABEL=Application Arguments
-ARGUMENTS_HELP=Arguments can be passed to the application at launch time. This option allows you to specify default arguments. The expected behaviour of the wrappers is to use those arguments only if none are passed by the user (in other words, they are overloaded by manual arguments).
+ARGUMENTS_HELP=Arguments can be passed to the application at launch time.<br>This option allows you to specify default arguments.<p>The expected behaviour of the wrappers is to use those arguments <u>only if none are passed by the user</u> (in other words, they are overloaded by manual arguments).
 EMBEDDEDJAR_LABEL=Embedded jar
-EMBEDDEDJAR_HELP=You can embed a jar file into the compiled executable. This jar file is extracted each time the executable binary is launched. This is typically used to create a single binary that contains everything (for instance for an installer).
+EMBEDDEDJAR_HELP=You can embed a jar file into the compiled executable. This jar file is extracted each time the executable binary is launched. This is typically used to create a single binary that contains everything (for instance for an installer).<br>You should keep it as small as possible for good performances.
 EMBEDDEDJAR_CHECKBOX=Use an embedded jar
 CLASSPATH_LABEL=Classpath
-CLASSPATH_HELP=Specify here the classpath used by the java application.<p>You can select jar or zip files, but also directories.
+CLASSPATH_HELP=Specify here the classpath used by the java application.<p>You can select jar or zip files, but also directories of classes.
 MINVERSION_LABEL=Minimum JVM Version
-MINVERSION_HELP=Specify here the minimum java version that your application needs to run properly.<p>For instance, <tt>1.2</tt> or <tt>1.4.2</tt> should be fine.
+MINVERSION_HELP=Specify here the <b>minimum</b> java version that your application needs to run properly.<p>For instance, <tt>1.2</tt> or <tt>1.4.2</tt> should be fine.
 MAXVERSION_LABEL=Maximum JVM Version
-MAXVERSION_HELP=Specify here the minimum java version that your application needs to run properly.<p>Most of the time, you won't need to set anything here because Java ensure a very good backward compatibility. However, in some specific cases, you may need to target an older VM.<p><b>NOTE</b>: To limit your application to using JVM, say, 1.2, it is best to specify 1.2.999 as the maximum. This is because users may have a 1.2.x installed (1.2 is equivalent to 1.2.0 for JSmooth).
+MAXVERSION_HELP=Specify here the <b>maximum</b> java version that your application needs to run properly.<p>Most of the time, you won't need to set anything here because Java ensure a very good backward compatibility. However, in some specific cases, you may need to target an older VM.<p><b>NOTE</b>: To limit your application to using JVM, say, 1.2, it is best to specify 1.2.999 as the maximum. This is because users may have a 1.2.x with x>0 installed (1.2 is equivalent to 1.2.0 for JSmooth).
 MAINCLASS_LABEL=Main class
 MAINCLASS_HELP=Choose the main class, among all the classes available in the classpath.
 JVMBUNDLE_LABEL=JVM Bundle
 JVMBUNDLE_CHECKBOX=Use a JVM bundled with your application
-JVMBUNDLE_HELP=Use this option only if you intend to bundle a full JVM with your application distribution. This option specifies the directory where JSmooth should be able to find a full-featured JVM.<p>For instance, people often distribute a Java Virtual Machine under a <tt>jre</tt> or a <tt>java</tt> sub-directory of the distribution root, as thus this is the value expected here.
+JVMBUNDLE_HELP=Use this option only if you intend to bundle a full JVM with your application distribution.<p>Bundling a JVM does <b>NOT</b> mean that the executable contains a JRE (which is a very bad idea), but rather installing a JRE as a sub-folder of your application (without the official Sun installer).<p>This option specifies the directory where JSmooth should be able to find a JRE directory containing bin and lib sub-directory.<p>For instance, people often distribute a Java Virtual Machine under a <tt>jre</tt> or a <tt>java</tt> sub-directory of their application root.
 JVMSEARCH_LABEL=JVM Search Sequence
 JVMSEARCH_HELP=This is where you can specify the order in which the JVM available are looked for.<p>The default is to search first in the Windows registry, then in standard environment variables, then in the system Path, then check if JView is installed.<p>The default should be fine for most users, but you can customize this search order by moving the elements up or down (preferred element are on top).
 MAXMEMORY_LABEL=Maximum Memory
-MAXMEMORY_HELP=The maximum memory that the JVM is allowed to allocate. The default depends on the JVM implementation, but a common value is 64MB. One should typically change it to a higher number for applications that consume lot of memory.
+MAXMEMORY_HELP=The maximum memory that the JVM is allowed to allocate. The default depends on the JVM implementation, but a common value is 64MB or 128MB. One should typically change it to a higher number for applications that consume lot of memory.
 UNIT_MB=MB
 UNIT_KB=KB
 UNIT_BYTE=B
 INITIALMEMORY_LABEL=Initial Memory Allocation
-INITIALMEMORY_HELP=JVMs often start with a small memory allocation. If your application allocates a lot of memory during the startup, increasing the initial memory allocated by the VM can dramatically speed up the launch.
+INITIALMEMORY_HELP=JVMs often start with a small memory allocation.<p>If your application allocates a lot of memory during the startup, increasing the initial memory allocated by the VM can dramatically speed up the launch.
 JAVAPROP_LABEL=Java Properties
-JAVAPROP_HELP=You can specify environment variable that are passed to the Java Virtual Machine at launch time.<p>Such variables are are typically accessed with the <tt>System.getProperty()</tt> method.
+JAVAPROP_HELP=You can specify environment variables that are passed to the Java Virtual Machine at launch time.<p>Such variables are are typically accessed with the <tt>System.getProperty()</tt> method.
 JAVAPROP_DIALOG_TITLE=Java Property Edition
 JAVAPROP_DIALOG_LABEL=Property
 JAVAPROP_NAME=Name
@@ -63,3 +63,51 @@ COMPILATION_DIALOG_TITLE=Compilation Dialog
 # Misc texts
 #
 UNKNOWN_SKEL=Selected skeleton is unknown.
+#
+# GUI LABELS
+#
+GUI_LABEL_EXECUTABLE_SETTINGS=Executable Settings
+GUI_LABEL_APPLICATION_SETTINGS=Application Settings
+GUI_LABEL_EMBEDDEDJAR_SETTINGS=Embbeded jar settings
+GUI_LABEL_JAVA_VERSION=Java version settings
+GUI_LABEL_BUNDLEDJRE=JRE (if bundled with your application)
+GUI_LABEL_MEMORYSETTINGS=Memory Settings
+
+#
+# SKELETON TEXTS
+#
+SKEL_CHOOSER_NONE=none
+SKEL_AUTODOWNLOAD_PROPERTY_DESCRIPTION=This skeleton wraps <b>GUI applications</b>.<ul><li>No console I/O is displayed <li>If no Java VM is found, the wrapper asks the user to download and install a Java VM using Sun's Auto Download service.</ul> Arguments can be passed to the application (either use the JSmooth default argument mechanism, or create a shortcut with arguments).
+
+SKEL_AUTODOWNLOAD_PROPERTY_MESSAGE_DESCRIPTION=When no JVM is found in the target computer, the user is prompted with the message defined below. Then, the default browser is launched with the URL defined here.
+SKEL_AUTODOWNLOAD_PROPERTY_MESSAGE_LABEL=Message
+###SKEL_AUTODOWNLOAD_PROPERTY_MESSAGE_VALUE=Java has not been found on your computer. Do you want to download it?
+SKEL_AUTODOWNLOAD_PROPERTY_DLURL_DESCRIPTION=The Sun's Auto Download URL for the JVM that should be downloaded by the wrapper when no JVM is found. Select the version of the JVM needed by your application. Select the highest possible version.
+SKEL_AUTODOWNLOAD_PROPERTY_DLURL_LABEL=Java VM to download
+#
+SKEL_GENERIC_PROPERTY_SINGLEPROCESS_DESCRIPTION=The default behaviour is to launch the java application in a different (detached)  process. If you want to force the wrapper to launch the Java application in the same process than the exe, than select this option.
+SKEL_GENERIC_PROPERTY_SINGLEPROCESS_LABEL=Launch java app in the exe process
+SKEL_GENERIC_PROPERTY_DEBUG_DESCRIPTION=Enable the jsmooth debug console.
+SKEL_GENERIC_PROPERTY_DEBUG_LABEL=Debug console
+
+#
+SKEL_CUSTOMDOWNLOAD_DESCRIPTION=This skeleton wraps <b>GUI applications</b>.<ul> <li>No console I/O is displayed <li>If no Java VM is found, the user is proposed to download and execute a file from the web. <li>The URL that the wrapper uses to download a file when no JVM is found must be defined in the wrapper. The URL can point on a .exe, a .cab, or any other filetype. Please note that some enterprise firewalls filter executable files. </ul> Arguments can be passed to the application (either use the JSmooth default argument mechanism, or create a shortcut with arguments).
+SKEL_CUSTOMDOWNLOAD_PROPERTY_MESSAGE_DESCRIPTION=When no JVM is found in the target computer, the user is prompted with the message defined below. Then, the default browser is launched with the URL defined here.
+SKEL_CUSTOMDOWNLOAD_PROPERTY_MESSAGE_LABEL=Message
+SKEL_CUSTOMDOWNLOAD_PROPERTY_URL_DESCRIPTION=URL of a file to download and execute. It must start with http://.....
+SKEL_CUSTOMDOWNLOAD_PROPERTY_URL_LABEL=URL
+#
+SKEL_CONSOLEWRAPPER_DESCRIPTION=This skeleton wraps <b>console applications</b>. <ul> <li> Standard Input/Output and Error streams are available <li> If no Java VM is found, it displays a default message. </ul> Although it is designed for console application (i.e. launched from the command.com shell prompt), it can launch standard GUI application. In such a case, any output of the java application (from System.out or System.err) is displayed in the a DOS Console.
+
+SKEL_CUSTOMWRAPPER_PROPERTY_MESSAGE_DESCRIPTION=When no JVM is found in the target computer, the following message is displayed on the console.
+SKEL_CUSTOMWRAPPER_PROPERTY_MESSAGE_LABEL=Message
+
+SKEL_CUSTOMWRAPPER_PROPERTY_KEYPRESS_DESCRIPTION=The wrapper waits a keypress on the console when the application exits.
+SKEL_CUSTOMWRAPPER_PROPERTY_KEYPRESS_LABEL=PressKey
+
+SKEL_SIMPLEWRAPPER_DESCRIPTION=This skeleton wraps <b>GUI applications</b>.<ul>  <li>No console I/O is displayed <li>If no Java VM is found, it is able to display a configurable URL (typically to a java download page). </ul> Arguments can be passed to the application (either use the JSmooth default argument mechanism, or create a shortcut with arguments).
+SKEL_SIMPLEWRAPPER_PROPERTY_MESSAGE_DESCRIPTION=When no JVM is found in the target computer, the user is prompted with the message defined below. Then, the default browser is launched with the URL defined here.
+SKEL_SIMPLEWRAPPER_PROPERTY_MESSAGE_LABEL=Message
+SKEL_SIMPLEWRAPPER_PROPERTY_URL_DESCRIPTION=If the user selects YES to the message prompted above, the default web browser is launched with this URL.
+SKEL_SIMPLEWRAPPER_PROPERTY_URL_LABEL=URL
+
