--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+0.9.9-3
+	- Fixed bug #1463939: Command line parameters parsing 
+	- Changed the GUI for property editors of jsmoothmodel bean
+	- Changed the GUI for the skeleton editors
+	- Added I18N support for skeleton texts
+
 0.9.9-2
 	- Fixed missing quotes for command-line arguments
 	- Fixed issue #1679934: jvm properties not defined properly when
