added skel support

--- a/src/locale/Texts.properties
+++ b/src/locale/Texts.properties
@@ -17,7 +17,7 @@ ABOUT=About...
 # Texts from the panels...
 #
 SKELETONCHOOSER_LABEL=Skeleton Selection
-SKELETONCHOOSER_HELP=A skeleton is an empty wrapper that launch your application. Each skeleton has its own behaviour regarding the application configuration and what is done when no JRE is found on the end-user's computer.<p>Read carefully their descriptions before picking one.
+SKELETONCHOOSER_HELP=A skeleton is an empty wrapper that launches your application. Each skeleton has its own behaviour regarding the application configuration and what is done when no JRE is found on the end-user's computer.<p>Read carefully their descriptions before picking one.
 EXECUTABLE_LABEL=Executable Binary
 EXECUTABLE_HELP=This is the name given to the executable binary.<br>It must end with the ".exe" suffix. For instance, <tt>myprogram.exe</tt> is just fine.
 CURRENTDIR_LABEL=Current Directory
