--- a/src/locale/Texts.properties
+++ b/src/locale/Texts.properties
@@ -22,6 +22,8 @@ EXECUTABLE_LABEL=Executable Binary
 EXECUTABLE_HELP=This is the name given to the executable binary.<br>It must end with the ".exe" suffix. For instance, <tt>myprogram.exe</tt> is just fine.
 CURRENTDIR_LABEL=Current Directory
 CURRENTDIR_HELP=Selects the directory to be set as the "current directory" of the the application, when launched. <p>Just leave it empty if you don't need any modification of this value at startup.<p>Typical use of this option is to go up one level when the executable is in a <tt>bin</tt> subdirectory of the program root.<p><b>WARNING</b>: Unlike the other files or directory options, which are all relative to the project file, this value is always relative to the generated executable location. That is, if you set <tt>".."</tt> or "an\\other\\dir" here, the generated wrapper will change to this directory from <u>its</u> current own current directory.
+CURRENTDIR_FORCEEXEPATH=Sets the executable folder as current directory of the application
+CURRENTDIR_FORCEEXEPATH_HELP=If this option is selected, the current directory of your application is forced to be the directory where the executable is installed.
 SKELETONPROPERTIES_LABEL=Skeleton Properties
 SKELETONPROPERTIES_HELP=The table above shows the properties associated to the selected skeleton. Change the values of the properties to customize the behaviour of the native executable wrapper generated.
 ICONLOCATION_LABEL=Executable Icon
