Adds file association handling

--- a/src/locale/Texts.properties
+++ b/src/locale/Texts.properties
@@ -111,4 +111,8 @@ SKEL_SIMPLEWRAPPER_PROPERTY_MESSAGE_DESCRIPTION=When no JVM is found in the targ
 SKEL_SIMPLEWRAPPER_PROPERTY_MESSAGE_LABEL=Message
 SKEL_SIMPLEWRAPPER_PROPERTY_URL_DESCRIPTION=If the user selects YES to the message prompted above, the default web browser is launched with this URL.
 SKEL_SIMPLEWRAPPER_PROPERTY_URL_LABEL=URL
+#
+#
+GENERAL_CANTOPENFILE=The JSmooth application couldn't open the file specified
+GENERAL_ERROR_LABEL=Error
 
