--- a/src/locale/Texts_fr.properties
+++ b/src/locale/Texts_fr.properties
@@ -110,4 +110,6 @@ SKEL_SIMPLEWRAPPER_PROPERTY_MESSAGE_DESCRIPTION=Lorsqu'aucune JVM n'est trouvée 
 SKEL_SIMPLEWRAPPER_PROPERTY_MESSAGE_LABEL=Message
 SKEL_SIMPLEWRAPPER_PROPERTY_URL_DESCRIPTION=Si l'utilisateur répond positivement, son  navigateur est lancé sur cette URL. L'URL doit commencer par <tt>http://...</tt>
 SKEL_SIMPLEWRAPPER_PROPERTY_URL_LABEL=URL
-
+#
+GENERAL_CANTOPENFILE=JSmooth n'a pas pu ouvrir le fichier demandé
+GENERAL_ERROR_LABEL=Erreur
