Fixed [ 1694136 ] Typos in strings

--- a/src/locale/Texts.properties
+++ b/src/locale/Texts.properties
@@ -21,13 +21,13 @@ SKELETONCHOOSER_HELP=A skeleton is an empty wrapper that launches your applicati
 EXECUTABLE_LABEL=Executable Binary
 EXECUTABLE_HELP=This is the name given to the executable binary.<br>It must end with the ".exe" suffix. For instance, <tt>myprogram.exe</tt> is just fine.
 CURRENTDIR_LABEL=Current Directory
-CURRENTDIR_HELP=Selects the directory to be set as the "current directory" of the the application, when launched. <p>Just leave it empty if you don't need any modification of this value at startup.<p>Typical use of this option is to go up one level when the executable is in a <tt>bin</tt> subdirectory of the program root.<p><b>WARNING</b>: Unlike the other files or directory options, which are all relative to the project file, this value is always relative to the generated executable location. That is, if you set <tt>".."</tt> or "an\\other\\dir" here, the generated wrapper will change to this directory from <u>its</u> current own current directory.
+CURRENTDIR_HELP=Selects the directory to be set as the "current directory" of the the application, when launched. <p>Just leave it empty if you don't need any modification of this value at startup.<p>Typical use of this option is to go up one level when the executable is in a <tt>bin</tt> subdirectory of the program root.<p><b>WARNING</b>: Unlike the other files or directory options, which are all relative to the project file, this value is always relative to the generated executable location. That is, if you set <tt>".."</tt> or "an\\other\\dir" here, the generated wrapper will change to this directory from <u>its</u> own current directory.
 CURRENTDIR_FORCEEXEPATH=Sets the executable folder as current directory of the application
 CURRENTDIR_FORCEEXEPATH_HELP=If this option is selected, the current directory of your application is forced to be the directory where the executable is installed.
 SKELETONPROPERTIES_LABEL=Skeleton Properties
 SKELETONPROPERTIES_HELP=The table above shows the properties associated to the selected skeleton. Change the values of the properties to customize the behaviour of the native executable wrapper generated.
 ICONLOCATION_LABEL=Executable Icon
-ICONLOCATION_HELP=Optionnally, you can select an icon to be compiled with the executable. This icon is typically used by the operating system to represent the file.<p>You should prefer .ICO files, as this is the format natively used for Win32 executable images, but <tt>GIF</tt>, <tt>JPEG</tt>, or <tt>PNG</tt> files should work fine, at the expense of an image quality decrease due to the color reduction process.
+ICONLOCATION_HELP=Optionally, you can select an icon to be compiled with the executable. This icon is typically used by the operating system to represent the file.<p>You should prefer .ICO files, as this is the format natively used for Win32 executable images, but <tt>GIF</tt>, <tt>JPEG</tt>, or <tt>PNG</tt> files should work fine, at the expense of an image quality decrease due to the color reduction process.
 ARGUMENTS_LABEL=Application Arguments
 ARGUMENTS_HELP=Arguments can be passed to the application at launch time.<br>This option allows you to specify default arguments.<p>The expected behaviour of the wrappers is to use those arguments <u>only if none are passed by the user</u> (in other words, they are overloaded by manual arguments).
 EMBEDDEDJAR_LABEL=Embedded jar
@@ -103,7 +103,7 @@ SKEL_CONSOLEWRAPPER_DESCRIPTION=This skeleton wraps <b>console applications</b>.
 SKEL_CUSTOMWRAPPER_PROPERTY_MESSAGE_DESCRIPTION=When no JVM is found in the target computer, the following message is displayed on the console.
 SKEL_CUSTOMWRAPPER_PROPERTY_MESSAGE_LABEL=Message
 
-SKEL_CUSTOMWRAPPER_PROPERTY_KEYPRESS_DESCRIPTION=The wrapper waits a keypress on the console when the application exits.
+SKEL_CUSTOMWRAPPER_PROPERTY_KEYPRESS_DESCRIPTION=The wrapper waits for a keypress on the console when the application exits.
 SKEL_CUSTOMWRAPPER_PROPERTY_KEYPRESS_LABEL=PressKey
 
 SKEL_SIMPLEWRAPPER_DESCRIPTION=This skeleton wraps <b>GUI applications</b>.<ul>  <li>No console I/O is displayed <li>If no Java VM is found, it is able to display a configurable URL (typically to a java download page). </ul> Arguments can be passed to the application (either use the JSmooth default argument mechanism, or create a shortcut with arguments).
