--- a/src/locale/Texts_fr.properties
+++ b/src/locale/Texts_fr.properties
@@ -113,3 +113,15 @@ SKEL_SIMPLEWRAPPER_PROPERTY_URL_LABEL=URL
 #
 GENERAL_CANTOPENFILE=JSmooth n'a pas pu ouvrir le fichier demandé
 GENERAL_ERROR_LABEL=Erreur
+
+JSMOOTH_WELCOME_SCREEN=<h1>JSmooth version @{VERSION}@ @{RELEASEINFO}@</h1>\
+<h2>Merci d'utiliser JSmooth!</h2>\
+Le project JSmooth est distribué sous licence GNU GPL (General Public License). Merci de lire le fichier License.txt (inclus). Les logiciels tiers fournis avec JSmooth peuvent avoir une license différente, merci de le vérifier si vous les redistribuez. \
+<p> Les executables créés par JSmooth (autrement dit, les lanceurs d'application) sont distribués sous licence LGPL avec une exception dite "runtime exception", similaire à celle de GCC: il n'est pas nécessaire de fournir le code source ni de publier une notice de copyright mentionnant jsmooth. Cela vous permet de distribuer sans contrainte les exécutables de vos applications. <br> \
+<ul> \
+<li> Pour obtenir les dernières nouveautés sur JSmooth, vous pouvez visiter le  <a href="http://jsmooth.sourceforge.net/">site web</a> \
+<li> Vous pouvez trouver les informations spécifiques à cette version de JSmooth en consultant soit le fichier <a href="Readme.txt">Readme.txt</a>, soit le <a href="Changelog.txt">Changelog</a>. \
+<li> La documentation est disponible en anglais aux formats <a href="docs/jsmooth-doc.html">HTML</a> et <a href="docs/jsmooth-doc.pdf">PDF</a>. \
+<li> Merci de lire les détails de <a href="LICENSE.txt">la licence de ce logiciel</a>. Vous pouvez également consulter la <a href="GPL-LICENSE.txt">licence GPL</a> (pour JSmooth) ou la <a href="LGPL-LICENSE.txt">licence LGPL</a> (pour le code source des executables). \
+</ul><h2>Support utilisateurs</h2> \
+Si vous rencontrez un bug, merci de le soumettre au <a href="http://sourceforge.net/tracker/?group_id=86730">tracker de jsmooth</a>. Si vous avez des questions sur l'utilisation de JSmooth, n'hésitez pas à utiliser <a href="http://sourceforge.net/forum/?group_id=86730">le forum</a> (anglais) sur sourceforge.
