--- a/src/locale/Texts.properties
+++ b/src/locale/Texts.properties
@@ -116,3 +116,16 @@ SKEL_SIMPLEWRAPPER_PROPERTY_URL_LABEL=URL
 GENERAL_CANTOPENFILE=The JSmooth application couldn't open the file specified
 GENERAL_ERROR_LABEL=Error
 
+JSMOOTH_WELCOME_SCREEN=<h1>JSmooth release @{VERSION}@ @{RELEASEINFO}@</h1>\
+<h2>Thanks for using JSmooth!</h2>\
+The JSmooth project is distributed under the terms of the GNU \
+General Public License. Please read the License.txt file that \
+comes with the package. Additional software bundled with JSmooth may come with their own license, please check.\
+<p> The executable generated (the launchers created by JSmooth) are under the LGPL with a "runtime exception" similar to the gcc licence exception: It is not required that you distribute the source code with, nor that you publish a notice mentionning jsmooth. <br> \
+<ul> \
+<li> For the latest news on JSmooth, visit the <a href="http://jsmooth.sourceforge.net/">web site</a> \
+<li> You can find specific information on this version of JSmooth in either the <a href="Readme.txt">Readme.txt</a> or the <a href="Changelog.txt">Changelog</a>. \
+<li> The documentation is available in <a href="docs/jsmooth-doc.html">HTML</a> and <a href="docs/jsmooth-doc.pdf">PDF</a> format. \
+<li> Please check the <a href="LICENSE.txt">license</a>. You can also consult the <a href="GPL-LICENSE.txt">GPL license</a> (for JSmooth) or the <a href="LGPL-LICENSE.txt">LGPL license</a> (for the executable source code). \
+</ul><h2>JSmooth Support</h2> \
+Please submit any bug you may find to <a href="http://sourceforge.net/tracker/?group_id=86730">the jsmooth tracker</a>. Should you have any question, please use <a href="http://sourceforge.net/forum/?group_id=86730">the forum</a> (hosted at sourceforge's).
