--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,10 @@
 	passed correctly
 	- Fixed bug #1694136: Typos in strings 
 	- Added welcome panel
+	- Fixed bug relative to the jvm bundle selection when enabled but
+	no directory was defined
+	- Added destination directory parameter in ant task (as suggested
+	in http://sourceforge.net/mailarchive/message.php?msg_name=20050920090245.99697.qmail%40web53103.mail.yahoo.com)
 	
 0.9.9-3	(2007-04-03)
 	- Fixed bug #1463939: Command line parameters parsing 
@@ -41,7 +45,7 @@
 	http client
 	- Updated the documentation w/ arguments mngmt
 	
-0.9.8
+0.9.8	(2007-02-20)
 	- Fixed the classpath in JRE1.2+ VM DLL instanciation
 	- Added a jvm.dll search when the location is not defined in the
 	registry.
@@ -58,7 +62,7 @@
 	- Now kill all the process launched and still running on exit
 	- Fixes some issues with JVM1.1 process-spawning
 	
-0.9.7
+0.9.7	(2004-03-16)
 	- Changed the GUI: now it uses l2f-common and does not rely on the
 	netbeans' form editor to build the interfaces. This is a major
 	change, which experiments with an inline help system and an
@@ -68,7 +72,7 @@
 	- Adds additional debug information for the wrappers, when
 	launched in debug mode.
 	
-0.9.6
+0.9.6	(2004-03-06)
 	- Now the JVM look-up method also takes the installed JDK into
 	account (not only the installed JRE)
 	- Fixed bug #858829 (Windowed Wrapper blocks Explorer)
@@ -85,7 +89,7 @@
 	- fixed bug #880441 (Jvm search from PATH environment variable)
 	- fixed bug #880439 (Jvm search from environment variables)
 	
-0.9.5
+0.9.5	(2003-11-23)
 	- ! Made the jar embedding optional. Now, one can choose to
 	include or not a jar file in the exe. If the jar is not included,
 	the main class must be in the classpath (obviously).
@@ -104,7 +108,7 @@
 	- Improved the documentation (at least, tried to)
 	- Fixed the README file
 	
-0.9.4
+0.9.4	(2003-09-23)
 	- ! Added Ant Task support 
 	- ! Added Command Line compiler
 	- ! distribution build now fully automatic
@@ -119,7 +123,7 @@
 	- Fixed a bug corrupting the value part when edition java
 	properties
 	
-0.9.3
+0.9.3	(2003-09-13)
 	- Added Java Properties management in JSmoothGen
 	- Added variable management for java properties in wrappers 
 	- Fixed bug: incorrect Sun's jre.exe/java.exe 1.1 classpath
@@ -139,17 +143,17 @@
 	- Written first draft of the user manual
 	- Fixed issue with parameter string ending with a backslash. 
 	
-0.9.2 (5 Sept 2003)
+0.9.2	(2003-09-05)
 	- Fixed a bug that prevented jsmoothgen to compile if the JIMI API
 	is not in the path
 
-0.9.1 (03 Sept 2003)
+0.9.1	(2003-09-03)
 	- Added the Console Wrapper
 	- Fixed a bug on the Windowed Wrapper (java.exe was called instead of javaw.exe)
 	- Fixed the broken icon generation
 	- Added JIMI library support (optional)
 	- Fixed several minor bugs
 
-0.9 (28 Aug 2003)
+0.9	(2003-08-31)
 	- First public release
 	- Window Wrapper available
