--- a/src/locale/Texts.properties
+++ b/src/locale/Texts.properties
@@ -121,7 +121,7 @@ JSMOOTH_WELCOME_SCREEN=<h1>JSmooth release @{VERSION}@ @{RELEASEINFO}@</h1>\
 The JSmooth project is distributed under the terms of the GNU \
 General Public License. Please read the License.txt file that \
 comes with the package. Additional software bundled with JSmooth may come with their own license, please check.\
-<p> The executable generated (the launchers created by JSmooth) are under the LGPL with a "runtime exception" similar to the gcc licence exception: It is not required that you distribute the source code with, nor that you publish a notice mentionning jsmooth. <br> \
+<p> The executable generated (the launchers created by JSmooth) are under the LGPL with a "runtime exception" similar to the gcc licence exception: It is not required that you distribute the source code with it, nor that you publish a notice mentionning jsmooth. <br> \
 <ul> \
 <li> For the latest news on JSmooth, visit the <a href="http://jsmooth.sourceforge.net/">web site</a> \
 <li> You can find specific information on this version of JSmooth in either the <a href="Readme.txt">Readme.txt</a> or the <a href="Changelog.txt">Changelog</a>. \
