Windows service wrapper update

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+0.9.9-5
+	- Adds new wrapper for windows services
+
 0.9.9-4	(2007-04-07)
 	- Fixed bug #1694330: Working directory handled incorrectly.
 	- Fixed bug #1694128: launch in exe proc: '\' in command line not
