--- a/src/locale/Texts.properties
+++ b/src/locale/Texts.properties
@@ -112,6 +112,27 @@ SKEL_SIMPLEWRAPPER_PROPERTY_MESSAGE_LABEL=Message
 SKEL_SIMPLEWRAPPER_PROPERTY_URL_DESCRIPTION=If the user selects YES to the message prompted above, the default web browser is launched with this URL.
 SKEL_SIMPLEWRAPPER_PROPERTY_URL_LABEL=URL
 #
+
+#
+#
+SKEL_WINSERVICE_DESCRIPTION=This skeleton wraps <b>Windows Services</b>.\
+<ul><li>The wrapper is a standard Windows Service <li>The JVM is instanciated with the native DLL, which means that the service does not appear as a generic "java" process in the task list, but with the name of the executable <li>No console I/O is displayed, but a logfile is available <li>If no Java VM is found, a pop-up alert is displayed to the user. </ul> \
+This wrapper turns your java application into a Windows service. The behaviour of this wrapper is very simple, the main class of your application is called when the service starts, and the application exits when the service is stopped. <p> When the application stops, a call to System.exit() is done by the wrapper, so that your program can save its state (if necessary) by using a shutdown hook (see <tt>Runtime.addShutdownHook()</tt>).
+SKEL_WINSERVICE_NAME_LABEL=Service name
+SKEL_WINSERVICE_NAME_DESCRIPTION=An internal name for the windows service. Its maximum length is 256 characters, and must not contain slash or backslash characters. This field is mandatory.
+SKEL_WINSERVICE_DISPLAYNAME_LABEL=Display name
+SKEL_WINSERVICE_DISPLAYNAME_DESCRIPTION=The name displayed for this service by user interface programs. If not set, the internal name is used.
+SKEL_WINSERVICE_DESCRIPTION_LABEL=Description
+SKEL_WINSERVICE_DESCRIPTION_DESCRIPTION=Specify here a description of the service, to be displayed by user interface programs.
+SKEL_WINSERVICE_PROPERTY_MESSAGE_LABEL=JVM-not-found message
+SKEL_WINSERVICE_PROPERTY_MESSAGE_DESCRIPTION=This message is displayed as an alert box to the user if no JVM is found on the user's computer. <p> This message is only displayed when the service starts, as the installation process does not required any JVM.
+SKEL_WINSERVICE_AUTOSTART_LABEL=Autostart service
+SKEL_WINSERVICE_AUTOSTART_DESCRIPTION=Enable this option to have the service started automatically at system startup. <p>If this option is disabled, the service must be started manually by the user.
+SKEL_WINSERVICE_LOGFILE_LABEL=Logfile
+SKEL_WINSERVICE_LOGFILE_DESCRIPTION=Specify here a name for the logfile of the service. This logfile is located in the same directory than the executable binary.
+SKEL_WINSERVICE_INTERACTIVE_LABEL=Interactive service
+SKEL_WINSERVICE_INTERACTIVE_DESCRIPTION=Enable this value if the service shall be allowed by Windows to operate interactions with the desktop. <p> For security reasons, Microsoft recommands to use a client-server approach to add a GUI to a service. <p> If this option is not enabled, the application will not be able to create windows or use the desktop. Note also that if your service starts at startup, the desktop may not be available.
+
 #
 GENERAL_CANTOPENFILE=The JSmooth application couldn't open the file specified
 GENERAL_ERROR_LABEL=Error
