--- a/src/locale/Texts_fr.properties
+++ b/src/locale/Texts_fr.properties
@@ -110,6 +110,27 @@ SKEL_SIMPLEWRAPPER_PROPERTY_MESSAGE_DESCRIPTION=Lorsqu'aucune JVM n'est trouvée 
 SKEL_SIMPLEWRAPPER_PROPERTY_MESSAGE_LABEL=Message
 SKEL_SIMPLEWRAPPER_PROPERTY_URL_DESCRIPTION=Si l'utilisateur répond positivement, son  navigateur est lancé sur cette URL. L'URL doit commencer par <tt>http://...</tt>
 SKEL_SIMPLEWRAPPER_PROPERTY_URL_LABEL=URL
+
+#
+#
+SKEL_WINSERVICE_DESCRIPTION=Ce squelette permet de lancer des <b>Services Windows</b> \
+<ul><li>Le lanceur est un service Windows standard <li>La JVM est instanciée en utilisant la DLL native, par conséquent le service apparait sous son nom d'exécutable dans la liste des tâches de Windows (et non sous une appellation générique "java.exe") <li> Aucune console d'E/S n'est affichée, mais un fichier de logs est disponible <li> Si java n'est pas trouvé, une alerte de type pop-up est affichée à l'utilisateur. </ul> \
+Ce lanceur transforme votre application java en service windows. Son comportement est très simple, la classe principale (contenant une méthode statique "main") est appelé lorsque le service démarre, et l'application se termine lorsque le service se met à l'arret. <p> Lors de l'arret, le lanceur appelle la méthode <tt>java.lang.System.exit()</tt>, ce qui permet à l'application de quitter proprement en utilisant un hook d'arrêt (voir <tt>Runtime.addShutdownHook()</tt>).
+SKEL_WINSERVICE_NAME_LABEL=Nom du service
+SKEL_WINSERVICE_NAME_DESCRIPTION=Un nom interne utilisé pour le service Windows. La taille maximale du nom est de 256 caractères, et il ne doit comporter ni slash ni anti-slash. Ce champ est obligatoire.
+SKEL_WINSERVICE_DISPLAYNAME_LABEL=Nom d'affichage
+SKEL_WINSERVICE_DISPLAYNAME_DESCRIPTION=Le contenu de ce champ est affiché par les interfaces graphiques de Windows qui listent les services. S'il n'est pas défini, c'est le nom interne du service qui est utilisé.
+SKEL_WINSERVICE_DESCRIPTION_LABEL=Description
+SKEL_WINSERVICE_DESCRIPTION_DESCRIPTION=Specify here a description of the service, to be displayed by user interface programs.
+SKEL_WINSERVICE_PROPERTY_MESSAGE_LABEL=Message Java non-trouvé
+SKEL_WINSERVICE_PROPERTY_MESSAGE_DESCRIPTION=Ce message s'affiche dans une pop-up d'alerte lorsque le lanceur tente de démarrer l'application, mais qu'aucune JVM n'est disponible sur l'ordinateur de l'utilisateur. <p> The message ne s'affiche qu'au démarrage du service, l'installation ne nécessitant pas de JVM pour fonctionner.
+SKEL_WINSERVICE_AUTOSTART_LABEL=Démarrage auto
+SKEL_WINSERVICE_AUTOSTART_DESCRIPTION=Activez cette option si vous souhaitez que votre service soit automatiquement démarré par Windows lors du démarrage du système. <p> Si cette option est déactivée, le service devra être lancé manuellement.
+SKEL_WINSERVICE_LOGFILE_LABEL=Fichier de logs
+SKEL_WINSERVICE_LOGFILE_DESCRIPTION=Définissez ici le nom du fichier de logs du service. The fichier est toujours situé dans le même répertoire que l'exécutable.
+SKEL_WINSERVICE_INTERACTIVE_LABEL=Service interactif
+SKEL_WINSERVICE_INTERACTIVE_DESCRIPTION=Activez cette option si votre service doit être autorisé par Windows à effectuer des interactions graphiques avec le bureau de l'utilisateur. <p> Pour des raisons des sécurité, Microsoft recommande de plutôt utiliser une approche client-serveur pour rajouter une interface graphique au service. Notez également que si votre service se lance automatiquement au démarrage du système, le bureau peut ne pas être disponible pour l'application.
+
 #
 GENERAL_CANTOPENFILE=JSmooth n'a pas pu ouvrir le fichier demandé
 GENERAL_ERROR_LABEL=Erreur
